# FancyTimer

./: .gitignore  LICENSE  README.md  matlab_complex_single_times.json  python_matlab_comparison_script.asv  python_matlab_comparison_script.m  setup.py
FancyTimer/: OperationTimer.m  OperationTimer.py
FancyTimer/examples/cython_test/: cython_test.c
aoa/: .gitignore  CBF.py  EM.py  MUSIC.py
aoa/.old/: MatlabBeamform.py  SerialBeamform.py  beamform_timing_script.py
aoa/.old/test_data/: unittest_beamformed_values.txt
aoa/base/: AoaAlgorithm.py  AoaAlgorithmCython.c  AoaAlgorithmCython.html  AoaAlgorithmCython.pyx  setup.py
aoa/cython/: .gitignore  CBF.c  CBF.html  CBF.pyx  CBFCython.c  CBFCython.html  CBFCython.pyx  setup.py
aoa/fortran/: CMakeLists.txt  README.md  beamforming_serial.f90  fortran_support.f90
aoa/python_interface/: SpeedBeamform.py
aoa/python_matlab_comparison/: python_matlab_comp_sweep.py  python_matlab_comparison_script.m  python_matlab_gpu_comp_sweep.py
base/: OperationTimer.m  OperationTimer.py  TestOperationTimer.m
beamforming/: .gitignore  BeamFort.py  CMakeLists.txt  beamforming_generic.f90  beamforming_serial.f90  beamforming_test.f90
beamforming/MATLAB/: .gitignore  get_beamformed_values.m  get_steering_vectors.m
beamforming/fortran/: CMakeLists.txt  beamforming_generic.f90  beamforming_serial.f90  fortran_support.f90
beamforming/fortran/c_interfaces/: beamforming_serial_c.f90
beamforming/python_interface/: BeamFort.py  BeamformTest.py  FastBeamForm.py  LS_AOA_test.py  MatlabBeamform.py  OperationTimer.py  SerialBeamform.py  SpeedBeamform.py  beamform_timing_script.py  ls_aoa_test.mat  math_speed_comparison.py
beamforming/python_matlab_comparison/: math_speed_comparison.m  matlab_complex_double_times.json  nb_python_complex_double_times.json  nb_python_complex_single_times.json  python_complex_double_times.json  python_complex_single_times.json  python_matlab_comparison_script.py
docs/: .gitignore  aoa.1D_fig.html  conf.py  index.rst
docs/python_matlab_speed_testing/: basic_testing.rst  beamforming.rst  extended_testing.rst  fdfd.rst  index.rst  matrix_testing.rst  timing_code.rst
docs/timing/: basic_testing.rst  beamforming.rst  extended_testing.rst  fdfd.rst  index.rst  matrix_testing.rst  timing_code.rst
docs/timing/figs/: exp.html  (+12 more)
modulation/: Modulation.py  OFDM.py  QAM.py  QamSim.py  SingleCarrier.py
modulation/test_data/: all_ones.s2p  all_ones_mod.s2p  los_optical_table.s2p
pycom/timing/: OperationTimer.py
python_matlab_comparison/: gen_figs.m  plot_timeit_sweep_reference.m
python_matlab_comparison/FDFD/: FDFD_2D.m  FDFD_2D.py
python_matlab_comparison/beamforming/: beamform_speed.m  beamform_speed.py
python_matlab_comparison/scripts/: .gitignore
(+85 files in other folders)
